--- a/Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/.env
+++ b/Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/.env
@@ -3,7 +3,7 @@ VITE_SITE_TITLE=Vyshnavi
 # react app site title
 VITE_SITE_BRAND=Honeyside
 # backend url
-VITE_BACKEND_URL=http://localhost:4000
+VITE_BACKEND_URL=https://clover-messaging-add.onrender.com
 # enable demo mode (default false)
 VITE_DEMO=false
 # show version info
