--- a/Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/netlify.toml
+++ b/Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base    = "Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend"
-  publish = "dist"
-  command = "npm install --legacy-peer-deps && npm run build"
+  base = "Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend"
+  command = "npm install react-is --legacy-peer-deps && npm run build"
+  publish = "Clover v2.9.1/Clover v2.9.1/codecanyon-25737452-clover-realtime-messaging-audio-video-conferencing-web-app-nodejs-react-webrtc-socketio/frontend/dist"
 
 [[redirects]]
   from = "/*"
